--- a/Project2/package.json
+++ b/Project2/package.json
@@ -1,6 +1,17 @@
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "serve-json": "json-server --watch db.json --port 4000"
+{
+  "name": "dnd-app",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "serve-json": "json-server --watch db.json --port 4000"
+  },
+  "dependencies": {
+    "next": "14.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "json-server": "^0.17.4"
+  }
 }
